# market-intelligence

./: .gitattributes  .gitignore  AGENTE-Espionagem-Competitiva.md  AGENTE-Estrategista-de-Campanha.md  AGENTE-Marketing-Analytics.md  CLAUDE.md  PLANO-EMPRESA-100.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  alembic.ini  celery_app.py  entrypoint.sh  main.py  nixpacks.toml  pyproject.toml  railway.toml
backend/agents/: __init__.py  ai_opportunity.py  base.py  competitor_hunter.py  daily_report.py  devils_advocate.py  founder_compatibility.py  market_size.py  monetization.py  persona.py  problem_hunter.py  project_generator.py  scorer.py  trend_hunter.py
backend/alembic/: README.md  env.py
backend/alembic/versions/: 552fc109d89d_add_founder_profile_table.py  5710a17a739b_initial_opportunities_and_daily_reports.py  a1b2c3d4e5f6_add_account_id_multitenant.py  b8d4e2f7a9c1_add_hunt_settings_and_runs.py  c7e1f9a3b2d4_add_separated_tool_fields.py  f3a9d27c8b15_add_partial_status_and_failed_agents.py
backend/api/: auth.py  research.py  routes.py  schemas.py
backend/core/: api_cache.py  config.py  database.py  exceptions.py  founder_profile.py  founder_profile_service.py  hunt_service.py  llm.py  logging_config.py  observability.py  pipeline.py  pipeline_control.py  summarize.py  tenancy.py  text.py
backend/integrations/: app_reviews.py  google_trends.py  grok.py  hackernews.py  instagram.py  perplexity.py  reddit.py  serper.py  tiktok.py
backend/models/: __init__.py  base.py  founder_profile.py  hunt.py  opportunity.py  report.py
backend/tests/: conftest.py  test_agents.py  test_api_cache.py  test_app_reviews.py  test_control_auth.py  test_founder_profile.py  test_from_idea_api.py  test_google_trends.py  test_hackernews.py  test_hunt.py  test_instagram.py  test_llm.py  test_llm_flow.py  test_observability.py  test_pipeline.py  test_pipeline_control.py  test_read_auth.py  test_reddit.py  test_research_api.py  test_routes_reads.py  test_serper.py  test_summarize.py  test_tenancy.py  test_text.py  test_tiktok.py  test_worker_scheduled.py
backend/workers/: pipeline_worker.py
docs/: CAPIVAREX_AI_COMPANY_BLUEPRINT.md  INTEGRACAO_N8N_RESEARCH.md  PROPOSTA_SCORER_DEVILS_ADVOCATE.md
docs/auditoria/: RELATORIO_1_PLANO_DE_TESTE.md  RELATORIO_2_RESULTADOS.md
frontend/: .env.example  .gitignore  next.config.mjs  package-lock.json  package.json
frontend/scripts/: hash-password.mjs
frontend/src/: instrumentation-client.ts  instrumentation.ts  middleware.ts  sentry.edge.config.ts  sentry.server.config.ts
frontend/src/app/: global-error.tsx  globals.css  layout.tsx  page.tsx
frontend/src/components/: DailyReportCard.tsx  JsonView.tsx  OpportunityCard.tsx  PipelineStatus.tsx  ScoreBadge.tsx  (+2 more)
(+12 files in other folders)
