[project]
name = "market-intelligence-backend"
version = "0.1.0"
description = "Market Intelligence AI - pipeline de 11 agentes que cacam oportunidades de negocio"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "pytrends>=4.9.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "agents", "integrations", "models", "api", "workers"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Conservador de proposito: pega bugs reais (imports/nomes) e bugbear,
# sem reordenar imports nem reformatar o repo. Da pra ligar "I"/"UP" depois.
select = ["E4", "E7", "E9", "F", "B"]
# B008: no FastAPI, Depends()/Query()/Header() como default de argumento e
# idiomatico (nao e bug). Ignorado globalmente.
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
# Baseline gradual: config valida e pronta pra apertar com o tempo.
warn_unused_ignores = false
check_untyped_defs = false
